src/test/ui/nll/ty-outlives/ty-param-fn.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:11:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:26:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
